load and stylise graph

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
 
 
-  <title>Gremlin Modern</title>
+  <title>Cloud Security Graph</title>
 </head>
 <body>
 <div id="app">
   <div class="header">
-    <div class="title">Gremlin Modern</div>
+    <div class="title">Cloud Security Graph</div>
     <div class="toolbar">
       <button id="btn-increase-zoom" title="Increase Zoom" class="demo-icon-yIconZoomIn"></button>
       <button id="btn-decrease-zoom" title="Decrease Zoom" class="demo-icon-yIconZoomOut"></button>
